Added a set of background colors, a set of text colors, and the primary color

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,1 +1,12 @@
 $titleBarHeight: 1.4em;
+
+$baseColor: #101010;
+$surfaceColor: #121212;
+$overlayColor: #181818;
+$titleBarColor: #212121;
+
+$primaryColor: #d32f2f;
+
+$highEmphasisText: #ffffffde;
+$mediumEmphasisText: #ffffff99;
+$disabledText: #ffffff61;
