Tweaked primary color

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -5,7 +5,7 @@ $surfaceColor: #121212;
 $overlayColor: #181818;
 $titleBarColor: #212121;
 
-$primaryColor: #d32f2f;
+$primaryColor: #bd0f0f;
 
 $highEmphasisText: #ffffffde;
 $mediumEmphasisText: #ffffff99;
