Added a generic button component
* Added darker versions of the primary color
* Changed the button in the new save component to the generic button component

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -5,6 +5,8 @@ $surfaceColor: #121212;
 $overlayColor: #181818;
 
 $primaryColor: #bd0f0f;
+$primaryColorDark: #b30f0f;
+$primaryColorExtraDark: #760a0a;
 
 $highEmphasisText: #ffffffde;
 $mediumEmphasisText: #ffffff99;
