Added a base label and a base text input component
The new save component now uses these to components.

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -3,6 +3,7 @@ $titleBarHeight: 1.9em;
 $baseColor: #101010;
 $surfaceColor: #121212;
 $overlayColor: #181818;
+$inputColor: #292929;
 
 $primaryColor: #bd0f0f;
 $primaryColorDark: #b30f0f;
