Added an SVG icon system
* Icons use IconBase.vue for sensible defaults and accessibility
* Icons are re-exported in a single file for easy import
* Added a square icon
* Added an X icon
* Added a horizontal line icon

* Added a light version of the primary color

* Changed the title bar to use the new icons
* Gave the window nav buttons a proper hover color
* No longer displaying separate text when the window is maximized as opposed to not being maximized, because I couldn't make a decent icon
* Slight clean-up of the title bar in general

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -5,6 +5,7 @@ $surfaceColor: #121212;
 $overlayColor: #181818;
 $inputColor: #292929;
 
+$primaryColorLight: #ec1313;
 $primaryColor: #bd0f0f;
 $primaryColorDark: #b30f0f;
 $primaryColorExtraDark: #760a0a;
