Fixed gray pallette

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -5,10 +5,10 @@ $gray200: #4d4d4d;
 $gray300: #292929;
 $gray400: #232323;
 $gray500: #1b1b1b;
-$gray600: #050505;
+$gray600: #151515;
 $gray700: #101010;
-$gray800: #121212;
-$gray900: #181818;
+$gray800: #0c0c0c;
+$gray900: #050505;
 
 $primaryColor100: #f37272;
 $primaryColor200: #f04242;
